2011-07-08  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: portability fixes in tests on amhello examples
	* tests/amhello-binpkg.test: Don't use "tar xzf too.tag.gz" to
	extract a gzip-compressed tarball, that's unportable to some
	tar implementations; use the "gzip -dc fo.tar.gz | tar xf -"
	idiom instead.
	* tests/amhello-cflags.test: Likewise.
	* tests/amhello-cross-compile.test: Likewise.
	Suggestion from Ralf Wildenhues.

2011-07-01  Stefano Lattarini  <stefano.lattarini@gmail.com>

	docs, tests: synchronize examples from docs to tests
	* tests/README (Writing test cases): Give suggestions on how to
	keep test cases and examples in the documentation synchronized.
	* doc/automake.texi: Improve or fix existing testcase-referencing
	comments, and add many new ones.
	* HACKING (Administrivia): Suggest to test complex examples and
	idioms from the manual.
	* tests/specflg8.test: Improve synchronization with the example
	in the manual.
	* tests/output11.test:Likewise.
	* tests/txinfo21.test:Likewise.
	* tests/interp.test: Likewise.  Since we are at it, and enable
	the `errexit' shell flag, do related changes, and add trailing
	`:'command.
	* tests/amhello-cflags.test: New test.
	* tests/amhello-cross-compile.test: Likewise.
	* tests/amhello-binpkg.test: Likewise.
	* tests/tests-environment-backcompat: Likewise.
	* tests/parallel-tests-log-compiler-example.test: Likewise.
	* tests/Makefile.am (TESTS): Update.

2011-06-23  Stefano Lattarini  <stefano.lattarini@gmail.com>

	docs: avoid a footnote, some related rewordings and improvements
	* doc/automake.texi (Dist): Reword the part about automatically
	distributed files to avoid a footnote.  Since we are at it, extend
	a bit, and add an example and a reference to a relevant test case.

2011-06-23  Stefano Lattarini  <stefano.lattarini@gmail.com>

	docs: minor cosmetic fixes
	* doc/automake.texi: Break few overly long lines, throughout the
	file.
	("Simple Tests"): Move @vindex for XFAIL_TESTS to the correct