@@ -1,3 +1,14 @@
+2011-07-23  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
+	tests: relax a test on amhello examples to cater to Solaris tar
+	* tests/amhello-binpkg.test: When the tar implementation in use
+	is not GNU tar, relax the tests on tar output, to avoid spurious
+	failures.  For example, "tar cvf ..." with GNU tar can output
+	lines like "./usr/bin/hello" on the standard output, while with
+	Solaris tar it can output lines like "a ./usr/bin/hello 8K" on
+	standard output, and with Heirloom tar it can output lines like
+	"a ./usr/bin/hello 15 tape blocks" on standard error.
+
 2011-07-08  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
 	tests: portability fixes in tests on amhello examples
